# voxel-engine

./: CMakeLists.txt
include/: Camera.h  Shader.h
include/glad/: glad.h
shaders/: firstShader.frag  firstVertShader.vert
src/: Shader.h  glad.c  main.cpp  shader.cpp
